# ChangeLog for media-libs/qhull
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/qhull/ChangeLog,v 1.45 2012/01/14 10:48:44 xarthisius Exp $

  14 Jan 2012; Kacper Kowalik <xarthisius@gentoo.org> qhull-2010.1-r2.ebuild:
  Fix quotes

  14 Jan 2012; Kacper Kowalik <xarthisius@gentoo.org>
  -files/qhull-2003.1-makefile.patch, -qhull-2003.1-r1.ebuild,
  qhull-2010.1-r2.ebuild:
  Drop old, add prefix keywords

  28 Jun 2011; Brent Baude <ranger@gentoo.org> qhull-2010.1-r2.ebuild:
  Marking qhull-2010.1-r2 ppc for bug 345279

  29 Dec 2010; Brent Baude <ranger@gentoo.org> qhull-2010.1-r2.ebuild:
  stable ppc64, bug 345279

  22 Dec 2010; Tobias Klausmann <klausman@gentoo.org> qhull-2010.1-r2.ebuild:
  Stable on alpha, bug #345279

  15 Nov 2010; Markos Chandras <hwoarang@gentoo.org> qhull-2010.1-r2.ebuild:
  Stable on amd64 wrt bug #345279

  13 Nov 2010; Thomas Kahle <tomka@gentoo.org> qhull-2010.1-r2.ebuild:
  x86 stable per bug #345279

*qhull-2010.1-r2 (03 Oct 2010)

  03 Oct 2010; Sébastien Fabbro <bicatali@gentoo.org>
  -qhull-2010.1-r1.ebuild, +qhull-2010.1-r2.ebuild,
  files/qhull-2010.1-cmake-install.patch:
  Error in previous patch, now installs all qhull headers to allow reverse
  dependencies to be compatible

*qhull-2010.1-r1 (03 Oct 2010)

  03 Oct 2010; Sébastien Fabbro <bicatali@gentoo.org> -qhull-2010.1.ebuild,
  +qhull-2010.1-r1.ebuild, +files/qhull-2010.1-cmake-install.patch,
  +files/qhull-2010.1-overflows.patch, metadata.xml:
  Added a patch for overflows. Add a patch that allows to install everything
  with cmake, so install include file and libararies properly now fixing bug
  #338964. Added longdescription and a static-libs use flag.

  09 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  qhull-2003.1-r1.ebuild:
  ppc64 stable wrt #318649

*qhull-2010.1 (22 May 2010)

  22 May 2010; Justin Lecher <jlec@gentoo.org> +qhull-2010.1.ebuild:
  Version bump, #307217
