@@ -3,16 +3,16 @@ Hash: SHA1
 
 AUX qhull-2010.1-cmake-install.patch 3343 RMD160 05f37393716a696c0bbe45bde0232295f5c84382 SHA1 0a7747eb13c2e07c25882c1f0f5c0dfb4ef1c8c0 SHA256 865b27a10d878d7ded45446e7dffc9369fdafa021e49bafe5575a32fbed1e200
 AUX qhull-2010.1-overflows.patch 1884 RMD160 2f8648009b4f72f8143caf16267d579e567805dd SHA1 21295d57af2f8cdfc775512fa44fe90f49d89c41 SHA256 8f49ad703f47467fd74d88614e1bbf7927b57c9c2af3c492fc2848f27a5f3181
-DIST qhull-2003.1.tar.gz 724313 RMD160 6c82ad27601f9aa12498e3bc08f06c7b777a5f4d SHA1 2e783b5e45cecc053b1dc08c682b871dfbb59dd2 SHA256 68725c96603a426da748d38d0f83e7a9dd6a0bfc483525debe04001846475b0b
 DIST qhull-2010.1-src.tgz 674457 RMD160 840530f0d103cfa0bd86d0226a41084866dd5ca2 SHA1 ed480912e03efdd767195c06c7e8c252c78112b1 SHA256 557085fb441b9b5a24589e08d7b1ae71ecd234fcb43ef4f8ffde141d22e316be
-EBUILD qhull-2003.1-r1.ebuild 773 RMD160 107c2e64d3fcc6b72f72d67387dac288fcccf977 SHA1 bc8e3c1faaa7a28b55e039e17c15ae6cdc883248 SHA256 e4fb22b20c1511c83884be3ff3b106e98cdaf98a932990130e46f32a5d41372b
+DIST qhull-2012.1-src.tgz 716665 RMD160 4199d326414087512efbbca25db8be51f69ef730 SHA1 60f61580e1d6fbbd28e6df2ff625c98d15b5fbc6 SHA256 a35ecaa610550b7f05c3ce373d89c30cf74b059a69880f03080c556daebcff88
 EBUILD qhull-2010.1-r2.ebuild 928 RMD160 a5a981c90d7559c4c351c822ca50f06493359929 SHA1 c763a2a28d351ed4754597cd386f4b7ff4918560 SHA256 0a462bbf3a3e371202efc096c02bc70cf09b5946e2df77d03ee28272c99327c0
-MISC ChangeLog 6634 RMD160 c0b671d818d2ee5bdd6b1553d178a62818ad5a38 SHA1 394f518dea84acee155da502a4ddcfcef687f8aa SHA256 a21c31b4b2f3819d296a0d69492fd67c6c8ba3c1c06d8cf7643b9779ed7e64c8
+EBUILD qhull-2012.1.ebuild 918 RMD160 b2d50f37662a4ddb2063a29f27470d9124f0423f SHA1 768185f41a1cec277e61e084e810958c7cc6d6fb SHA256 c88cfa2295cf550562cd9d81a16d2e7bcee66cf053034f8826a90ecefceea151
+MISC ChangeLog 6754 RMD160 9a45ca8a03b2ffdd5cf6a45f60b2fc92669d097d SHA1 9e2331f893d4f5f1509a804e0edf7b87edd8b397 SHA256 55bd4ee5105960a4987d31d5f8470de50599f80ec5678ee620e3ce52fb931d92
 MISC metadata.xml 868 RMD160 2a19303a67c0fa027b2184f9c69cfcba97ef898b SHA1 c7c349b68ed3ca785b2cdd9c69e2986d3dd58eed SHA256 70f5b10b77085086e04610e478a4c3dc68af409f0fb5ceafdd5076c8d054fe8b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk+5Kg4ACgkQX3X2B8XHTonAkwCfWIgcjIEomr3sUxQPHH5IKDQz
-cx4An0IZg1KMGSfMxZtEqFrsVNV7G5j6
-=Gqvi
+iEYEARECAAYFAk/CCy8ACgkQX3X2B8XHTomxCgCgj/ZeO8/FBgM9rNMGaK4YhCdS
+CuMAoITsUBgCO/9hMjRIXIINSiGOc/wd
+=WZnM
 -----END PGP SIGNATURE-----
