@@ -1,0 +1,34 @@
+# Copyright 1999-2012 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/qhull/qhull-2012.1.ebuild,v 1.1 2012/05/23 17:09:28 bicatali Exp $
+
+EAPI=4
+
+inherit cmake-utils flag-o-matic
+
+MY_P="${PN}${PV}"
+DESCRIPTION="Geometry library"
+HOMEPAGE="http://www.qhull.org/"
+SRC_URI="${HOMEPAGE}/download/${P}-src.tgz"
+
+SLOT="0"
+LICENSE="BSD"
+KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos"
+IUSE="doc static-libs"
+
+DOCS=( Announce.txt File_id.diz README.txt REGISTER.txt )
+
+src_configure() {
+	append-flags -fno-strict-aliasing
+	mycmakeargs+=(
+		-DLIB_INSTALL_DIR="${EPREFIX}"/usr/$(get_libdir)
+		-DDOC_INSTALL_DIR="${EPREFIX}"/usr/share/doc/${PF}/html
+	)
+	cmake-utils_src_configure
+}
+
+src_install() {
+	cmake-utils_src_install
+	use doc || rm -rf "${ED}"/usr/share/doc/${PF}/html
+	use static-libs || rm -f "${ED}"/usr/$(get_libdir)/lib*.a
+}
